--- a/dscommerce-html-css-main/carrinho.html
+++ b/dscommerce-html-css-main/carrinho.html
@@ -37,9 +37,7 @@
                 </div>
               </div>
             </div>
-            <div class="dsc-cart-item-right">
-              R$ 5000,00
-            </div>
+            <div class="dsc-cart-item-right">R$ 5000,00</div>
           </div>
           <div class="dsc-cart-item-container dsc-line-bottom">
             <div class="dsc-cart-item-left">
@@ -53,21 +51,15 @@
                 </div>
               </div>
             </div>
-            <div class="dsc-cart-item-right">
-              R$ 5000,00
-            </div>
+            <div class="dsc-cart-item-right">R$ 5000,00</div>
           </div>
           <div class="dsc-cart-total-container">
             <h3>R$ 15000,00</h3>
           </div>
         </div>
         <div class="dsc-btn-page-container">
-            <div class="dsc-btn dsc-btn-blue">
-              Finalizar pedido
-            </div>
-            <div class="dsc-btn dsc-btn-white">
-              Continuar comprando
-            </div>
+          <div class="dsc-btn dsc-btn-blue">Finalizar pedido</div>
+          <div class="dsc-btn dsc-btn-white">Continuar comprando</div>
         </div>
       </section>
     </main>
