01-13 Barra de busca

--- a/dscommerce-html-css-main/catalogo.html
+++ b/dscommerce-html-css-main/catalogo.html
@@ -37,9 +37,7 @@
             </div>
             <div class="dsc-catalog-card-bottom">
               <h3>R$ 5000,00</h3>
-              <h4>
-                Computador Gamer XT
-              </h4>
+              <h4>Computador Gamer XT</h4>
             </div>
           </div>
           <div class="dsc-card">
@@ -60,9 +58,7 @@
             </div>
             <div class="dsc-catalog-card-bottom">
               <h3>R$ 5000,00</h3>
-              <h4>
-                Computador Gamer XT
-              </h4>
+              <h4>Computador Gamer XT</h4>
             </div>
           </div>
           <div class="dsc-card">
@@ -71,9 +67,7 @@
             </div>
             <div class="dsc-catalog-card-bottom">
               <h3>R$ 5000,00</h3>
-              <h4>
-                Computador Gamer XT
-              </h4>
+              <h4>Computador Gamer XT</h4>
             </div>
           </div>
           <div class="dsc-card">
@@ -82,9 +76,7 @@
             </div>
             <div class="dsc-catalog-card-bottom">
               <h3>R$ 5000,00</h3>
-              <h4>
-                Computador Gamer XT
-              </h4>
+              <h4>Computador Gamer XT</h4>
             </div>
           </div>
           <div class="dsc-card">
@@ -93,9 +85,7 @@
             </div>
             <div class="dsc-catalog-card-bottom">
               <h3>R$ 5000,00</h3>
-              <h4>
-                Computador Gamer XT
-              </h4>
+              <h4>Computador Gamer XT</h4>
             </div>
           </div>
           <div class="dsc-card">
@@ -104,9 +94,7 @@
             </div>
             <div class="dsc-catalog-card-bottom">
               <h3>R$ 5000,00</h3>
-              <h4>
-                Computador Gamer XT
-              </h4>
+              <h4>Computador Gamer XT</h4>
             </div>
           </div>
           <div class="dsc-card">
@@ -115,9 +103,7 @@
             </div>
             <div class="dsc-catalog-card-bottom">
               <h3>R$ 5000,00</h3>
-              <h4>
-                Computador Gamer XT
-              </h4>
+              <h4>Computador Gamer XT</h4>
             </div>
           </div>
           <div class="dsc-card">
@@ -126,9 +112,7 @@
             </div>
             <div class="dsc-catalog-card-bottom">
               <h3>R$ 5000,00</h3>
-              <h4>
-                Computador Gamer XT
-              </h4>
+              <h4>Computador Gamer XT</h4>
             </div>
           </div>
           <div class="dsc-card">
@@ -137,9 +121,7 @@
             </div>
             <div class="dsc-catalog-card-bottom">
               <h3>R$ 5000,00</h3>
-              <h4>
-                Computador Gamer XT
-              </h4>
+              <h4>Computador Gamer XT</h4>
             </div>
           </div>
         </div>
