01-18 Começando a tela de listagem de produtos

--- a/dscommerce-html-css-main/form.html
+++ b/dscommerce-html-css-main/form.html
@@ -37,13 +37,25 @@
             <h2>Dados do produto</h2>
             <div class="dsc-form-controls-container">
               <div>
-                <input class="dsc-form-control" type="text" placeholder="Nome">
+                <input
+                  class="dsc-form-control"
+                  type="text"
+                  placeholder="Nome"
+                />
               </div>
               <div>
-                <input class="dsc-form-control" type="text" placeholder="Preço">
+                <input
+                  class="dsc-form-control"
+                  type="text"
+                  placeholder="Preço"
+                />
               </div>
               <div>
-                <input class="dsc-form-control" type="text" placeholder="Imagem">
+                <input
+                  class="dsc-form-control"
+                  type="text"
+                  placeholder="Imagem"
+                />
               </div>
               <div>
                 <select class="dsc-form-control dsc-select" required>
@@ -53,12 +65,17 @@
                 </select>
               </div>
               <div>
-                <textarea class="dsc-form-control dsc-textarea" placeholder="Descrição"></textarea>
+                <textarea
+                  class="dsc-form-control dsc-textarea"
+                  placeholder="Descrição"
+                ></textarea>
               </div>
             </div>
 
             <div class="dsc-product-form-buttons">
-              <button type="reset" class="dsc-btn dsc-btn-white">Cancelar</button>
+              <button type="reset" class="dsc-btn dsc-btn-white">
+                Cancelar
+              </button>
               <button type="submit" class="dsc-btn dsc-btn-blue">Salvar</button>
             </div>
           </form>
